ingress/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /backend(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: backend-svc
                port:
                  number: 80
