ingress/front-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /frontend(/|$)(.*)
            pathType: Prefix 
            backend:
              service:
                name: frontend-svc
                port:
                  number: 80
